--- a/package.json
+++ b/package.json
@@ -29,8 +29,10 @@
     "passport-saml": "^0.33.0",
     "passport-strategy": "^1.0.0",
     "q": "^1.5.1",
+    "winston": "^3.0.0",
     "xml-crypto": "^0.10.1",
-    "xmlbuilder": "^10.0.0"
+    "xmlbuilder": "^10.0.0",
+    "xmldom": "^0.1.27"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
